Fix wrap

--- a/src/Robot.css
+++ b/src/Robot.css
@@ -7,6 +7,7 @@
 .row {
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .sliders {
